--- a/details.css
+++ b/details.css
@@ -3,9 +3,14 @@ body{
     font-size:13px;
     font-weight: 300;
 }
-.main-container{
+#back-button img{
+    display:initial;
+    margin-top: 10px;
+}
+.inner-container{
     width:100%;
     display: flex;
+    margin-top:100px;
 }
 section{
     margin-bottom: 120px;
@@ -34,15 +39,31 @@ section{
  
  
     }
-/*.submit-button{
-    width:100%;
-    background-color: rgb(33, 123, 167);
+.submit-button{
+    width:40%;
+    height: 40px;
     text-align:center;
-    position: fixed;
-    bottom: 0%;
     padding-top: 3%;
     padding-bottom: 3%;
-    height: 60px;
+    background: none;
+    border: solid 2px;
+    margin-top: 25px;
+   
     
 }
-*/
+
+
+@media screen and (max-width:800px)
+{    .inner-container{
+    flex-direction:column;
+}
+
+    .submit-button{
+    width:100%;
+    height: 60px;
+    background-color: rgb(33, 123, 167);
+    position: fixed;
+    bottom: 0%;
+    border:none;
+    }
+}
