--- a/details.css
+++ b/details.css
@@ -51,6 +51,23 @@ section{
    
     
 }
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.made-by{
+    font-family: serif;
+    color: rgb(1, 8, 15);
+    font-size: 12px;
+    padding:10px;
+}
+.demo{
+    background-color:#000c;;
+    color: #fff;
+    padding:10 px;
+
+}
 
 
 @media screen and (max-width:800px)
@@ -60,10 +77,11 @@ section{
 
     .submit-button{
     width:100%;
-    height: 60px;
+    height: 70px;
     background-color: rgb(33, 123, 167);
     position: fixed;
     bottom: 0%;
     border:none;
     }
+  
 }
