--- a/checkout.css
+++ b/checkout.css
@@ -1,4 +1,11 @@
 
+ body {  font-family: 'Roboto', 'Noto', sans-serif;
+    font-size: 13px;
+    line-height: 1.5;
+}
+.main-container{
+  
+}
 .form-section{
     display:flex;
     width: 100%;
@@ -8,28 +15,59 @@
 }
 .details{
     width:40%;
-    margin-top:3%;
-    margin-bottom:3%;
+    margin-bottom: 20px;
+  
 }
 .payment-details{
     width:40%;
-    margin-top:3%;
-    margin-bottom:3%;
+   
 }
+.account-information{
+    margin-bottom: 20px;
+}
+.shipping-address{
+margin-top:10px;
+margin-bottom: 10px;
+}
+.payment-method{
+    margin-top:10px;
+    margin-bottom:10px;
+}
+.order-summary{
+    margin-top:20px;
+    margin-bottom: 20px;
+    }
+   .billing-address{
+    margin-top:20px;
+    margin-bottom: 20px;
+   }
+   .order-item-list{
+    margin-top: 10px;
+    margin-bottom: 10px;
+   }
+   .expiry{
+       margin-top:20px;
+   }
 
 .card-details{
     display:flex;
-    margin-top:3%;
-    margin-bottom:3%;
+  
 }
 .card-details div{
    width:100%;
 }
 select{
     width:100%;
-    border:0px;
+   border: none;
     background: none;
-    height:70px;
+    border-bottom:solid  rgb(192, 189, 185) 1px;
+    height:72px;
+    outline: none;
+}
+select:hover{
+   
+    border-bottom:solid  black 2px;
+
 }
 
 .form-section input{
@@ -42,11 +80,12 @@ select{
 
 } 
 #checkbox{
-    width:100%;
-    height:20px;
+    width:5%;
+    height:15px;
+    border:1px;
     border-color:solid black 1px;
-     background: none;
-
+    background: none;
+float:left;
 }
 
 input:hover{
@@ -67,10 +106,47 @@ border-bottom:solid  black 2px;
 }
 .page-heading{
     text-align: center;
-    margin: 50px;
+  margin-bottom: 3%;
+  margin-top:3%; 
    
 }
-.page-heading span{
-  margin: 10px;
-  width: 100%;
+.page-heading h3{
+    font-weight: 300;
+    margin-bottom: 10px;
+    font-size: 18px;
+    text-align: center;
+}
+
+
+@media screen and (max-width:800px)
+{    .inner-container{
+    flex-direction:column;
+}
+   
+.details{
+    width:100%;
+    margin-bottom: 20px;
+  
+}
+.payment-details{
+    width:100%;
+   
+}
+.order-summary{margin-bottom: 90px;
+}
+ #button{
+    width:100%;
+    height: 70px;
+    background-color: rgb(33, 123, 167);
+    position: fixed;
+    bottom: 0%;
+    border:none;
+    margin :0px;
+    
+}
+.menu-button img{
+    display:initial;
+
+}
+  
 }
