--- a/cart.css
+++ b/cart.css
@@ -1,12 +1,15 @@
-.main-container{
-    width: 100%;
-    display: flex;
-    flex-flow: column;
 
+.outer-container{
+    width:100%;
+}
+
+.main-container{
+    display:flex;
+    flex-flow:column;
 }
 
 .cart-section{
-    width: 100%;
+    width: 90%;
     display:flex;
     justify-content: space-around;
     text-align: center;
@@ -19,15 +22,26 @@
 .cart-name{
 width: 100%;
 text-align: center;
-margin: 50px;
+margin-top:5%;
+margin-bottom:5%;
 }
-.item-image{
-    width: 40px;
+.cart-name h3{
+font-family: roboto;
+font-weight:500;
+margin-bottom:10px;
 }
 
+.item-image{
+    width: 60px;
+}
+
+.item-name{
+    padding-top:10px;
+}
 .item-image img{
 width:100%;
 }
+
 select{
     border: none;
     background: none;
@@ -36,7 +50,7 @@ select{
     border: solid black 2px;
     width:150px;
     height:35px;
-    margin: 5%;
+    margin-top: 0px;
     background: none;
 }
 .remove-button{
@@ -51,11 +65,52 @@ a{
 display: flex;
 float:right;
 justify-content: space-around;
-width:300px;
+width:40%;
+margin-right: 10%;
+margin-top: 40px;
 }
-  span{
-    padding-top: 15px;
+
+
+#button1{
+    display: none;
 }
+
+
+footer{
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    width:100%;
+}
+
 .menu-bar{
     display: none;
+}
+
+
+@media screen and (max-width:800px)
+{
+ 
+.menu-button img{
+    display: initial;
+}
+#button{
+    display: none;
+}
+#button1{
+    width:100%;
+    height: 70px;
+    background-color: rgb(33, 123, 167);
+    position: fixed;
+    bottom: 0%;
+    border:none;
+    margin :0px;
+    display: initial;
+    
+}
+footer{
+    display:none;
+}
+
+ 
 }
