--- a/list.css
+++ b/list.css
@@ -4,6 +4,10 @@ display: flex;
 flex-flow: column;
 justify-content: center;
 }
+.inner-container{
+    display: grid;
+    grid-template-columns: 0.2fr 0.6fr 0.2fr ;
+}
 .main-container{
     width: 100%;
     display: grid;
