--- a/cart.css
+++ b/cart.css
@@ -1,117 +1,160 @@
-
-.outer-container{
-    width:100%;
+.outer-container {
+    width: 100%;
 }
 
-.main-container{
-    display:flex;
-    flex-flow:column;
+.main-container {
+    display: flex;
+    flex-flow: column;
 }
-
-.cart-section{
-    width: 90%;
-    display:flex;
+.item-details{
+    display: grid;
+    grid-template-columns: 0.3fr .7fr;
+    justify-content: space-around;
+    width: 100%;
+}
+.item-image-name{
+    display: flex;
+}
+.item-image{
+    width:60px;
+}
+.item-image img{
+    width:60px;
+}
+.cart-section {
+    
+    display: flex;
     justify-content: space-around;
     text-align: center;
     font-weight: 700;
     font-size: 12px;
     color: rgb(65, 73, 73);
-
-
-}
-.cart-name{
-width: 100%;
-text-align: center;
-margin-top:5%;
-margin-bottom:5%;
-}
-.cart-name h3{
-font-family: roboto;
-font-weight:500;
-margin-bottom:10px;
 }
 
-.item-image{
+.cart-name {
+    width: 97%;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom:20px;
+}
+
+.cart-name h3 {
+    font-family: roboto;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.cart-name span {
+    font-size: 13px;
+    color: #4d5d65;
+}
+
+.item-image {
     width: 60px;
 }
 
-.item-name{
-    padding-top:10px;
-}
-.item-image img{
-width:100%;
+.item-name {
+    padding-top: 10px;
 }
 
-select{
+.item-image img {
+    width: 100%;
+}
+label{
+    font-size: 14px;
+    font-weight: 200;
+}
+
+
+select {
     border: none;
     background: none;
     margin-top: 5px;
 }
+
+select:hover {
+    outline: none;
+}
+
 #button{
     border: solid black 2px;
-    width:150px;
-    height:35px;
+    width: 150px;
+    height: 35px;
     margin-top: 0px;
     background: none;
 }
-.remove-button{
-    font-size: 20px;
 
+.remove-button {
+    width: 15px;
+    height: 10px;
+    margin-top: 5px;
 }
-a{
+.remove-button img{
+    width:100%;
+}
+a {
     color: rgb(65, 73, 73);
     text-decoration: none;
 }
+
 .total-amount{
-display: flex;
-float:right;
-justify-content: space-around;
-width:40%;
-margin-right: 10%;
-margin-top: 40px;
+    width:100%;
+    display: inline;
+    text-align: right;
+    margin-right: 20px;
+    margin-top:20px; 
 }
 
+.total-amount span{
+    margin-left:30px;
+    margin-right:70px;
+}
 
-#button1{
+#button1 {
     display: none;
 }
 
-
-footer{
+footer {
     position: absolute;
     bottom: 0px;
     text-align: center;
-    width:100%;
+    width: 99%;
 }
 
-.menu-bar{
+.menu-bar {
     display: none;
 }
 
-
-@media screen and (max-width:800px)
-{
- 
-.menu-button img{
-    display: initial;
-}
-#button{
-    display: none;
-}
-#button1{
-    width:100%;
-    height: 70px;
-    background-color: rgb(33, 123, 167);
-    position: fixed;
-    bottom: 0%;
-    border:none;
-    margin :0px;
-    display: initial;
-    
-}
-footer{
-    display:none;
-}
-
- 
+@media screen and (max-width:800px) {
+    .menu-button img {
+        display: initial;
+    }
+    #button {
+        display: none;
+    }
+    #button1 {
+        width: 100%;
+        height: 66px;
+        background-color: rgb(33, 123, 167);
+        position: fixed;
+        bottom: 0%;
+        border: none;
+        margin: 0px;
+        display: initial;
+    }
+    footer {
+        display: none;
+    }
+    .cart-name {
+        width: 99%;
+        font-size: 14px;
+        margin-top: 20px;
+        margin-bottom: 5%;
+    }
+    .item-details{
+        display: flex;
+        flex-direction: column;
+       
+       
+    }
 }
