--- a/details.css
+++ b/details.css
@@ -1,87 +1,111 @@
-body{
+body {
     font-family: roboto;
-    font-size:13px;
+    font-size: 13px;
     font-weight: 300;
 }
-#back-button img{
-    display:initial;
+
+#back-button img {
+    display: initial;
     margin-top: 10px;
 }
-.inner-container{
-    width:100%;
-    display: flex;
-    margin-top:100px;
-}
-section{
-    margin-bottom: 120px;
-   
 
+.inner-container {
+    width: 100%;
+    display: flex;
+    margin-top: 100px;
 }
-.item-image{
+
+section {
+    margin-bottom: 120px;
+}
+
+.item-image {
     width: 80%;
 }
-  .item-image img{
-      width: 100%;
-      margin-left: 10%;
-  }
-.select{
-    
-   color:rgb(118, 120, 126);
-    
+
+.item-image img {
+    width: 100%;
+    margin-left: 10%;
 }
-.select select{
- height:35px;
- width:100%;
- 
- background:none;
- border-left:0px;
- border-right:0px; 
- 
- 
-    }
-.submit-button{
-    width:40%;
+
+.select {
+    color: rgb(118, 120, 126);
+}
+
+.select select {
+    height: 35px;
+    width: 100%;
+    background: none;
+    border-left: 0px;
+    border-right: 0px;
+}
+
+.item-description {
+    color: rgb(95, 94, 98);
+}
+
+.item-description h3 {
+    color: black;
+}
+
+.features p {
+    font-size: 15px;
+    color: black;
+}
+
+.submit-button {
+    width: 40%;
     height: 40px;
-    text-align:center;
+    text-align: center;
     padding-top: 3%;
     padding-bottom: 3%;
     background: none;
     border: solid 2px;
     margin-top: 25px;
-   
-    
 }
-footer{
+
+.item-name {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.price-tag {
+    font-size: 13px;
+    color: rgb(95, 94, 98);
+    font-size: 20px;
+}
+
+footer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.made-by{
+
+.made-by {
     font-family: serif;
     color: rgb(1, 8, 15);
     font-size: 12px;
-    padding:10px;
+    padding: 10px;
 }
-.demo{
-    background-color:#000c;;
+
+.demo {
+    background-color: #000c;
+    ;
     color: #fff;
-    padding:10 px;
-
+    padding: 10 px;
 }
 
-
-@media screen and (max-width:800px)
-{    .inner-container{
-    flex-direction:column;
-}
-
-    .submit-button{
-    width:100%;
-    height: 70px;
-    background-color: rgb(33, 123, 167);
-    position: fixed;
-    bottom: 0%;
-    border:none;
+@media screen and (max-width:800px) {
+    .inner-container {
+        flex-direction: column;
     }
-  
+    .submit-button {
+        width: 100%;
+        height: 66px;
+        background-color: rgb(33, 123, 167);
+        position: fixed;
+        bottom: 0%;
+        border: none;
+    }
 }
