--- a/header_footer.css
+++ b/header_footer.css
@@ -1,79 +1,86 @@
-header{
-    width :100%;
+header {
+    width: 100%;
     align-self: center;
 }
-.logo-bar{
-    display:flex;
+
+.logo-bar {
+    display: flex;
     justify-content: space-between;
     text-align: center;
 }
 
-.menu-button img{
-   
+.menu-button img {
     height: 18px;
     width: 23px;
-    margin-top: 7%;
-    margin-left: 10%;
+    margin-top: 3px;
+    margin-left: 12px;
     display: none;
-    
 }
-.heading{
+
+#back-button {
+    margin-top: 2px;
+}
+
+.heading {
     text-align: center;
-    padding-top: 1%;
+    padding-top: 10px;
     font-size: 16px;
     font-weight: 600;
     color: black;
 }
 
-.cart img{
+.cart img {
     height: 30px;
     width: 30px;
-    margin-top: 6%;
-    margin-right: 10%; 
-    float:right;
+    margin-right: 10px;
+    float: right;
 }
+
 .menu-bar {
     display: flex;
-    margin-right:23%;
-    margin-left:23%;
-    margin-top:5%;
+    margin-right: 23%;
+    margin-left: 23%;
+    margin-top: 5%;
+    margin-bottom:20px;
     justify-content: space-around;
     font-size: 15px;
-    color:rgb(58, 56, 56);
+    color: rgb(58, 56, 56);
 }
-.menu-bar a:hover{
-border-bottom: solid black 2px;
+
+.menu-bar a:hover {
+    border-bottom: solid black 2px;
 }
-footer{
+
+footer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.made-by{
+
+.made-by {
     font-family: serif;
     color: rgb(1, 8, 15);
     font-size: 12px;
-    padding:10px;
+    padding: 10px;
 }
-.demo{
-    background-color:#000c;;
-    color: #fff;
-    padding:10px;
 
+.demo {
+    background-color: #000c;
+    ;
+    color: #fff;
+    padding: 10px;
 }
-a{
+
+a {
     color: rgb(65, 73, 73);
     text-decoration: none;
 }
 
-@media screen and (max-width:800px)
-{
- .menu-bar{
-     display: none;
- }
-
-.menu-button img{
-    display: initial;
-}
- 
+@media screen and (max-width:800px) {
+    .menu-bar {
+        display: none;
+    }
+    .menu-button img {
+        display: initial;
+    }
 }
