--- a/CSS/details.css
+++ b/CSS/details.css
@@ -30,7 +30,17 @@ section {
 
 .select {
     color: rgb(118, 120, 126);
+    position: relative;
 }
+.lable{
+    position: absolute;
+    top: 10px;
+    z-index: -1;
+    font-family: sans-serif;
+    
+   
+}
+
 
 .select select {
     height: 35px;
@@ -38,8 +48,14 @@ section {
     background: none;
     border-left: 0px;
     border-right: 0px;
+    padding-left: 80px;
+    font-size: 16px;
+    outline: none;
 }
 
+.size-selector{
+    border-bottom: 0px;
+}
 .item-description {
     color: rgb(95, 94, 98);
 }
